# autoLevel

./: CMakeLists.txt  README.md  SerialClass.h  SerialPort.cpp  SerialPort.hpp  SerialPortDummy.cpp  SerialPortDummy.h  core  emu.cpp  emu.h  house.cpp  house.h  jack.cpp  jack.h  main.cpp  sensor.cpp  sensor.h  sqlInterface.h  testsuite.cpp
autoLevel/: autoLevel.vcxproj
sketch/: sketch.ino
sketch/MPU9150_raw_relay_serial/: MPU9150_raw_relay_serial.ino
sketch/VoltageToAngle/: sketch_nov28a.ino
sketch/sketch_nov28a/: sketch_nov28a.ino
